--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^7.29",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "2.5"
+        "laravel/ui": "2.5",
+        "mcamara/laravel-localization": "^1.6"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
